FY23Q1 refresh - office-add-ins-sso
- run through all exercise steps in associated MSLearn module to validate good working order
- updated steps & fixed typos where necessary
- implement changes per Acrolinx feedback
- any & all users/names/company names/pictures/IDs are not real people/tenants... all are from M365 demo tenants provided by Microsoft

--- a/learn-m365-pr/m365-developer/office-add-ins-sso/2-office-add-in-single-sign-on.yml
+++ b/learn-m365-pr/m365-developer/office-add-ins-sso/2-office-add-in-single-sign-on.yml
@@ -1,14 +1,14 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.office-add-ins-sso.2-office-add-in-single-sign-on
 metadata:
-  title: Implement Single Sign-On (SSO) for Office Add-ins
+  title: Implement single sign-on (SSO) for Office Add-ins
   description: In this unit, you'll learn how authentication works with Office Add-ins and how to use SSO for your Office Add-ins.
-  ms.date: 05/03/2022
+  ms.date: 09/02/2022
   author: andrewconnell-msft
   ms.author: suzanz
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Implement Single Sign-On (SSO) for Office Add-ins
+title: Implement single sign-on (SSO) for Office Add-ins
 durationInMinutes: 11
 content: |
   [!include[](includes/2-office-add-in-single-sign-on.md)]
