--- a/learn-m365-pr/m365-developer/office-add-ins-sso/3-exercise-word-sso.yml
+++ b/learn-m365-pr/m365-developer/office-add-ins-sso/3-exercise-word-sso.yml
@@ -1,14 +1,14 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.office-add-ins-sso.3-exercise-word-sso
 metadata:
-  title: Exercise - Create an Office Add-in for Word that implements Single Sign-On
+  title: Exercise - Create an Office Add-in for Word that implements single sign-on
   description: In this exercise, you'll build a Word add-in that inserts details about the currently logged in user with Microsoft Graph. This process uses the single sign-on (SSO) authentication scheme.
-  ms.date: 05/03/2022
+  ms.date: 09/02/2022
   author: andrewconnell-msft
   ms.author: suzanz
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Exercise - Create an Office Add-in for Word that implements Single Sign-On
+title: Exercise - Create an Office Add-in for Word that implements single sign-on
 durationInMinutes: 18
 content: |
   [!include[](includes/3-exercise-word-sso.md)]
