--- a/learn-m365-pr/m365-developer/office-add-ins-sso/4-sso-microsoft-graph.yml
+++ b/learn-m365-pr/m365-developer/office-add-ins-sso/4-sso-microsoft-graph.yml
@@ -1,14 +1,14 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.office-add-ins-sso.4-sso-microsoft-graph
 metadata:
-  title: Use Single Sign-On (SSO) in Office Add-ins with Microsoft Graph
+  title: Use single sign-on (SSO) in Office Add-ins with Microsoft Graph
   description: In this unit, you'll learn how to implement SSO in an Office Add-in to submit requests and retrieve information from Microsoft Graph.
-  ms.date: 03/01/2022
+  ms.date: 09/02/2022
   author: andrewconnell-msft
   ms.author: suzanz
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Use Single Sign-On (SSO) in Office Add-ins with Microsoft Graph
+title: Use single sign-on (SSO) in Office Add-ins with Microsoft Graph
 durationInMinutes: 8
 content: |
   [!include[](includes/4-sso-microsoft-graph.md)]
