--- a/learn-m365-pr/m365-developer/office-add-ins-sso/5-exercise-excel-sso.yml
+++ b/learn-m365-pr/m365-developer/office-add-ins-sso/5-exercise-excel-sso.yml
@@ -1,14 +1,14 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.office-add-ins-sso.5-exercise-excel-sso
 metadata:
-  title: Exercise - Create an Office Add-in for Excel that implements Single Sign-On
+  title: Exercise - Create an Office Add-in for Excel that implements single sign-on
   description: In this exercise, you'll build an Excel add-in that adds a list of the recent emails received by the currently logged in user with Microsoft Graph in a worksheet. This process uses the single sign-on (SSO) authentication scheme.
   ms.date: 03/01/2022
   author: andrewconnell-msft
   ms.author: suzanz
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Exercise - Create an Office Add-in for Excel that implements Single Sign-On
+title: Exercise - Create an Office Add-in for Excel that implements single sign-on
 durationInMinutes: 18
 content: |
   [!include[](includes/5-exercise-excel-sso.md)]
