FY23Q1 refresh - sharepoint-spfx-graph-3rd-party-apis
- run through all exercise steps in associated MSLearn module to validate good working order
- updated steps & fixed typos where necessary
- implement changes per Acrolinx feedback
- any & all users/names/company names/pictures/IDs are not real people/tenants... all are from M365 demo tenants provided by Microsoft

--- a/learn-m365-pr/m365-developer/sharepoint-spfx-graph-3rd-party-apis/7-exercise-graph-api.yml
+++ b/learn-m365-pr/m365-developer/sharepoint-spfx-graph-3rd-party-apis/7-exercise-graph-api.yml
@@ -3,7 +3,7 @@ uid: learn-m365.sharepoint-spfx-graph-3rd-party-apis.7-exercise-graph-api
 metadata:
   title: Exercise - Call Microsoft Graph from SharePoint Framework components
   description: In this exercise, you'll create a new SharePoint Framework project with a single client-side web part that uses React and Microsoft Graph to display the currently logged in user's personal details in a familiar office Persona card.
-  ms.date: 05/02/2022
+  ms.date: 09/05/2022
   author: andrewconnell-msft
   ms.author: suzanz
   ms.topic: interactive-tutorial
@@ -20,13 +20,13 @@ quiz:
     - content: "Use the `AadHttpClient` object from the SharePoint Framework API to call the Microsoft Graph endpoint. This object is returned by calling the `this.context.aadHttpClientFactory.getClient('https://...')` method and is configured with the necessary access token included in every HTTP request."
       isCorrect: false
       explanation: "While you can use the `AadHttpClient` and `aadHttpClientFactory` objects in the SharePoint Framework API, the `msGraphClientFactory` object simplifies obtaining a configured instance of the Microsoft Graph JavaScript SDK."
-    - content: "Obtain an access token with the `this.context.aadHttpClientFactory.getToken()` method and configure a new instance of the `MSGraphClient` object."
+    - content: "Obtain an access token with the `this.context.aadHttpClientFactory.getToken()` method and configure a new instance of the `MSGraphClientV3` object."
       isCorrect: false
-      explanation: "While you can obtain an access token and configure an instance of the `MSGraphClient` object, the `msGraphClientFactory` object simplifies obtaining a configured instance of the Microsoft Graph JavaScript SDK."
-    - content: "Use the `msGraphClientFactory` to obtain a reference to the `MSGraphClient` object included as part of the SharePoint Framework API."
+      explanation: "While you can obtain an access token and configure an instance of the `MSGraphClientV3` object, the `msGraphClientFactory` object simplifies obtaining a configured instance of the Microsoft Graph JavaScript SDK."
+    - content: "Use the `msGraphClientFactory` to obtain a reference to the `MSGraphClientV3` object included as part of the SharePoint Framework API."
       isCorrect: true
       explanation: "Correct!"
-  - content: "How do you get the current user's details using the `MSGraphClient` object?"
+  - content: "How do you get the current user's details using the `MSGraphClientV3` object?"
     choices:
     - content: "Call the `MSGraphClient.api('https://graph.microsoft.com/v1.0/me') method that will return the current user's details."
       isCorrect: false
