Updates author metadata

--- a/learn-m365-pr/m365/m365-compliance-information-govern-information/index.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-govern-information/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Manage the data lifecycle in Microsoft Purview
   description:  Learn how to manage your content lifecycle using solutions to import, store, and classify business-critical data so you can keep what you need and delete what you don't. 
   ms.date: 05/02/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Manage the data lifecycle in Microsoft Purview
