--- a/learn-m365-pr/m365/m365-security-data-loss/index.yml
+++ b/learn-m365-pr/m365/m365-security-data-loss/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Prevent data loss
   description: Learn how information protection helps organizations protect data to prevent data loss or theft.
   ms.date: 05/02/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Prevent data loss  
