--- a/learn-m365-pr/m365/m365-compliance-information-classify-data/index.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-classify-data/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Classify data for protection and governance
   description:  Learn about the information available to help you understand your data landscape and know your data.
   ms.date: 05/09/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Classify data for protection and governance
