--- a/learn-m365-pr/m365/m365-compliance-information-protect-information/index.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-protect-information/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Protect information in Microsoft Purview
   description:  Learn how to detect sensitive content as it's used and shared throughout your organization, in the cloud and on devices, and help prevent accidental data loss. 
   ms.date: 04/29/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Protect information in Microsoft Purview
