--- a/learn-m365-pr/m365-developer/sharepoint-spfx-web-part-property-pane/7-exercise-pnp-controls.yml
+++ b/learn-m365-pr/m365-developer/sharepoint-spfx-web-part-property-pane/7-exercise-pnp-controls.yml
@@ -17,13 +17,13 @@ quiz:
   questions:
   - content: "What is required to use the PnP reusable property pane controls in a SharePoint Framework client-side web part project?"
     choices:
-    - content: "Install the NPM package that contains the PnP reusable property pane controls into the project using NPM (or another package manager."
+    - content: "Install the npm package that contains the PnP reusable property pane controls into the project using NPM (or another package manager."
       isCorrect: true
       explanation: "Correct!"
     - content: "Nothing - the library is already included in the default project created by the Yeoman generator for the SharePoint Framework."
       isCorrect: false
       explanation: "You must install the library; it isn't included in default projects."
-    - content: "Install the NPM package that contains the PnP reusable property pane controls and uninstall the package that contains the default controls."
+    - content: "Install the npm package that contains the PnP reusable property pane controls and uninstall the package that contains the default controls."
       isCorrect: false
       explanation: "You don't need to uninstall anything to use the PnP library."
   - content: "Why are some of the controls in the PnP reusable property pane controls library called *smart controls*?"
