--- a/learn-m365-pr/m365/viva-goals-okr-coaching/index.yml
+++ b/learn-m365-pr/m365/viva-goals-okr-coaching/index.yml
@@ -14,9 +14,9 @@ summary: Learn about the role of an OKR Coach, how to effectively coach others i
 abstract: |
   By the end of this module, you will be able to:
     - Ask the right questions about OKRs
-    - Unblock Conversation
-    - Provide OKR Feedback
-    - Coaching Others on their OKRs
+    - Unblock conversation
+    - Provide OKR feedback
+    - Coach others on their OKRs
 prerequisites: |
   OKR Leadership Program - Become an OKR Champion with Viva Goals
 iconUrl: /learn/achievements/generic-badge.svg
