Updates author metadata that was missed

--- a/learn-m365-pr/m365/m365-threat-safeguard/integrate-microsoft-tools.yml
+++ b/learn-m365-pr/m365/m365-threat-safeguard/integrate-microsoft-tools.yml
@@ -5,8 +5,8 @@ metadata:
   title: Integrate with other Microsoft tools
   description: Learn about the Microsoft Defender for Identity component of Microsoft 365 Defender. 
   ms.date: 04/25/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: dcurwin
+  ms.author: dacurwin
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 durationInMinutes: 5
