--- a/learn-m365-pr/m365/m365-threat-safeguard/index.yml
+++ b/learn-m365-pr/m365/m365-threat-safeguard/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Safeguard your environment with Microsoft Defender for Identity
   description: Learn about the Microsoft Defender for Identity component of Microsoft 365 Defender. 
   ms.date: 04/25/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: dcurwin
+  ms.author: dacurwin
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Safeguard your environment with Microsoft Defender for Identity
