Fixed casing in OKR coach

--- a/learn-m365-pr/m365/viva-goals-okr-coaching/index.yml
+++ b/learn-m365-pr/m365/viva-goals-okr-coaching/index.yml
@@ -2,15 +2,15 @@
 uid: learn-m365.viva-goals-okr-coaching
 metadata:
   moduleType: standard
-  title: OKR Coaching with Viva Goals
-  description: Learn about the role of an OKR Coach, how to effectively coach others in the creation of OKRs, and what resources are available to set you and your team up for success.
-  ms.date: 07/25/2022
+  title: OKR coaching with Viva Goals
+  description: Learn about the role of an OKR coach, how to effectively coach others in the creation of OKRs, and what resources are available to set you and your team up for success.
+  ms.date: 09/21/2022
   author: rasanders
   ms.author: rasanders
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: OKR Coaching with Viva Goals
-summary: Learn about the role of an OKR Coach, how to effectively coach others in the creation of OKRs and what resources are available to set you and your team up for success.
+title: OKR coaching with Viva Goals
+summary: Learn about the role of an OKR coach, how to effectively coach others in the creation of OKRs and what resources are available to set you and your team up for success.
 abstract: |
   By the end of this module, you will be able to:
     - Ask the right questions about OKRs
