--- a/learn-m365-pr/m365/viva-goals-okr-coaching/role-okr-coach.yml
+++ b/learn-m365-pr/m365/viva-goals-okr-coaching/role-okr-coach.yml
@@ -1,10 +1,10 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.viva-goals-okr-coaching.role-okr-coach
-title: Role of an OKR Coach
+title: Role of an OKR coach
 metadata:
   unitType: learning-content
-  title: Role of an OKR Coach
-  description: Learn the roles and responsibilities of an OKR Coach.
+  title: Role of an OKR coach
+  description: Learn the roles and responsibilities of an OKR coach.
   ms.date: 07/25/2022
   author: rasanders
   ms.author: rasanders
