--- a/learn-m365-pr/m365/viva-goals-okr-coaching/three-key-questions.yml
+++ b/learn-m365-pr/m365/viva-goals-okr-coaching/three-key-questions.yml
@@ -1,10 +1,10 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.viva-goals-okr-coaching.three-key-questions
-title: Three key questions of an OKR Coach
+title: Three key questions of an OKR coach
 metadata:
   unitType: learning-content
-  title: Three key questions of an OKR Coach
-  description: Learn the three questions that you can use in your toolkit as an OKR Coach. 
+  title: Three key questions of an OKR coach
+  description: Learn the three questions that you can use in your toolkit as an OKR coach. 
   ms.date: 07/25/2022
   author: rasanders
   ms.author: rasanders
