Private Preview Message Update
Removing the Private Preview message from the VIva Goals learning paths

--- a/learn-m365-pr/paths/viva-goals-get-started/index.yml
+++ b/learn-m365-pr/paths/viva-goals-get-started/index.yml
@@ -9,7 +9,7 @@ metadata:
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Get started with Microsoft Viva Goals
-summary: Viva Goals is a goal-setting and management solution that aligns teams to your organization's strategic priorities, driving results and a thriving business with OKRs. This learning path will introduce you to the OKR framework, teach you how to write great OKRs, and show you how to use Viva Goals software.<br><br>**IMPORTANT** - Viva Goals is currently available only for preview customers, and only in English. The features described here are subject to change. [Learn more about Viva Goals.](https://go.microsoft.com/fwlink/?linkid=2189933)
+summary: Viva Goals is a goal-setting and management solution that aligns teams to your organization's strategic priorities, driving results and a thriving business with OKRs. This learning path will introduce you to the OKR framework, teach you how to write great OKRs, and show you how to use Viva Goals software.
 prerequisites: |
   - None
 iconUrl: /training/achievements/generic-trophy.svg
