Updates author metadata to new WWL author

--- a/learn-m365-pr/m365/m365-threat-remediate/index.yml
+++ b/learn-m365-pr/m365/m365-threat-remediate/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Remediate risks with Microsoft Defender for Office 365
   description: Learn about the Microsoft Defender for Office 365 component of Microsoft 365 Defender.
   ms.date: 04/25/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: kenMAG
+  ms.author: kelawson
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Remediate risks with Microsoft Defender for Office 365  
