--- a/learn-m365-pr/m365/m365-security-threat-protect/index.yml
+++ b/learn-m365-pr/m365/m365-security-threat-protect/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Protect against threats with Microsoft Defender for Endpoint
   description: Learn how Microsoft Defender for Endpoint can help your organization stay secure.
   ms.date: 04/22/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: kenMAG
+  ms.author: kelawson
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Protect against threats with Microsoft Defender for Endpoint  
